# rust-cms

./: .gitignore  Cargo.toml
auth/: Cargo.toml
auth/src/token/: mod.rs  test.rs  token.rs  token_middleware.rs
builtin_plugins/hello-world/: config.json  hello.fl  hello.wasm
builtin_plugins/hello_world/: config.json  hello_world.wasm
entity/: Cargo.toml
entity/src/entities/: email_verification.rs  mod.rs  permission.rs  prelude.rs  role.rs  role_permission.rs  token.rs  user.rs
hash/: Cargo.toml
hash/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230418_101322_create_user_table.rs  m20230418_111519_create_post.rs  m20230418_121601_create_token.rs  m20230420_093824_create_email_verification.rs  m20230422_133556_create_role.rs  m20230422_135423_create_permission.rs  m20230422_140203_create_role_permissions.rs
plugin_manager/: Cargo.toml
plugin_manager/src/: config.rs  lib.rs  manager.rs  wasm.rs
src/: main.rs
src/core_routers/: mod.rs
src/core_routers/account/: get_token.rs  mod.rs  profile.rs  send_verification.rs  verify.rs
src/core_routers/plugin/: mod.rs  run_plugin.rs
src/email/: email.rs
src/error/: mod.rs  router_error.rs
src/middlewares/: token_checker.rs
