[package]
name = "abedi-blog"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "hash", "plugin_manager"]

[dependencies]
plugin_manager = { path = "plugin_manager" }
entity = { path = "entity" }
auth = { path = "auth" }
hash = { path = "hash" }
migration = { path = "migration" }
actix-web = "4"
actix-cors = "0.6.4"
dotenvy = "0.15"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.10.4", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }

[dependencies.sea-orm]
version = "^0"
features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ]

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

